<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/screen_about_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <RelativeLayout
        android:id="@+id/screen_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="72px"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
    >
        <TextView
            android:id="@+id/screen_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_details_title"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="14sp"
            android:paddingLeft="10px"
            android:textStyle="italic"
        >
        </TextView>
        <ImageButton
            android:id="@+id/screen_top_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10px"
            android:background="@null"
        >
        </ImageButton>   
    </RelativeLayout>

    <TextView
        android:id="@+id/details_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:paddingLeft="10px"
    >
    </TextView>
 	    <TextView
	        android:id="@+id/details_mid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/downloadCaption"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textSize="14sp"
	        android:paddingLeft="10px"
	    >
	    </TextView>
	    <Button
	      android:id="@+id/x86button"
          android:text="@string/x86Update"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:onClick="onClick1"
          >
	    </Button>
	    <Button
	      android:id="@+id/x64button"
          android:text="@string/x64Update"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:onClick="onClick2"
          >
	    </Button>
    <TextView
		android:id="@+id/details_support"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/details3"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:textSize="14sp"
		android:paddingLeft="10px"
		android:autoLink="email|phone"
    >
    </TextView>
 
</LinearLayout>